# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  environment-dev.yml  package.json  pyproject.toml
.github/: test.yml
.github/workflows/: pre-commit.yml  test.yml  tools-pre-commit.yml
dev/: generate_cli_output.py  generate_makefile_targets_table.py
src/anaconda_pre_commit_hooks/: add_renovate_annotations.py  run_cog.py
tests/: test_generate_renovate_annotations.py
